// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dehydrates 1`] = `
Object {
  "fields": Object {
    "fake-field-id": Object {
      "value": "",
    },
  },
}
`;

exports[`hydrates 1`] = `
Object {
  "fields": Object {
    "field-1": FieldStore {
      "emitter": ActionEmitter {
        "actionsList": Array [],
        "fbEmmiter": BaseEventEmitter {
          "_currentSubscription": null,
          "_subscriber": EventSubscriptionVendor {
            "_currentSubscription": null,
            "_subscriptionsForType": Object {},
          },
        },
        "uniqueEventTypeNumber": 0,
      },
      "fieldId": "field-1",
      "formId": "fake-form-id",
      "state": Object {
        "value": "field value 1",
      },
    },
  },
}
`;

exports[`registers a field 1`] = `
Object {
  "fake-field-id": FieldStore {
    "emitter": ActionEmitter {
      "actionsList": Array [],
      "fbEmmiter": BaseEventEmitter {
        "_currentSubscription": null,
        "_subscriber": EventSubscriptionVendor {
          "_currentSubscription": null,
          "_subscriptionsForType": Object {},
        },
      },
      "uniqueEventTypeNumber": 0,
    },
    "fieldId": "fake-field-id",
    "formId": "fake-form-id",
    "state": Object {
      "value": "",
    },
  },
}
`;

exports[`unregisters a field 1`] = `
Object {
  "fake-field-id": FieldStore {
    "emitter": ActionEmitter {
      "actionsList": Array [],
      "fbEmmiter": BaseEventEmitter {
        "_currentSubscription": null,
        "_subscriber": EventSubscriptionVendor {
          "_currentSubscription": null,
          "_subscriptionsForType": Object {},
        },
      },
      "uniqueEventTypeNumber": 0,
    },
    "fieldId": "fake-field-id",
    "formId": "fake-form-id",
    "state": Object {
      "value": "",
    },
  },
}
`;

exports[`unregisters a field 2`] = `Object {}`;
